[gd_scene load_steps=4 format=3 uid="uid://dxqqschunersa"]

[ext_resource type="Theme" uid="uid://c55lhrkiw4ysq" path="res://7.UI/Theme/AzyrTheme.tres" id="1_dwdxi"]
[ext_resource type="Script" uid="uid://bllbwsdmkga0b" path="res://7.UI/GUI/EndScreen/end_screen.gd" id="2_u4jqt"]
[ext_resource type="StyleBox" uid="uid://crpci47t7tqbd" path="res://7.UI/Theme/panel_plat_black.tres" id="3_3qtxd"]

[node name="VictoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_dwdxi")
script = ExtResource("2_u4jqt")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_dwdxi")
theme_override_styles/panel = ExtResource("3_3qtxd")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 27)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/VBoxContainer"]
modulate = Color(0.85, 0.12749998, 0.28404164, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "BLOODY TIME OVER"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="WaveLabel" type="Label" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(0.41360003, 0.4369199, 0.88, 1)
layout_mode = 2
size_flags_horizontal = 4
text = "Finish Time: .............."

[node name="SurviveTime" type="Label" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(0.41360003, 0.4369199, 0.88, 1)
layout_mode = 2
size_flags_horizontal = 4
text = "Finish Time: .............."

[node name="Thank" type="Label" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/VBoxContainer/VBoxContainer"]
modulate = Color(0.42084, 0.63, 0.10710001, 1)
layout_mode = 2
size_flags_horizontal = 4
text = "Thanks for playing
What now?"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="BackButton" type="Button" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 0
text = "Back"
alignment = 0

[node name="NewGameButton" type="Button" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 10
text = "New Game"
alignment = 0

[node name="MarginContainer3" type="MarginContainer" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 27)
layout_mode = 2

[connection signal="pressed" from="Panel/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer2/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer2/NewGameButton" to="." method="_on_new_game_button_pressed"]
